---------------------------------------------------------------------------------------------------
Version: 1.9.0
Date: 8.10.2018
  Features:
    - added remote interface callbacks to recieve stop and dispatcher data
---------------------------------------------------------------------------------------------------
Version: 1.8.2
Date: 2.10.2018
  Bugfixes:
    - setting Stop timeout was missing some description
    - changing "Stop is Depot" signal to 0 didn't remove available train
    - deactivating a depot through circuit condition didn't remove available train
    - short circuited depot didn't remove available train
---------------------------------------------------------------------------------------------------
Version: 1.8.1
Date: 12.9.2018
  Bugfixes:
    - on_load checks for corrupt stops
---------------------------------------------------------------------------------------------------
Version: 1.8.0
Date: 17.8.2018
  Features:
    - added optional circuit conditions to schedules
  Changes:
    - enabled read from train for all ltn stops by default
    - enabled send to train for all ltn stops by default
    - generated schedules use ≥ (ltn stops still parse > for loading list output)
---------------------------------------------------------------------------------------------------
Version: 1.7.13
Date: 29.7.2018
  Features:
    - added notifications for skipping request processing due to no transport capacities in depot
    - spam filter works with no-train-found notifications #128
---------------------------------------------------------------------------------------------------
Version: 1.7.12
Date: 20.7.2018
  Bugfixes:
    - recreate stops missing from global stop list in on_configuration_changed
  Changes:
    - removed incompatible flag of there-is-my-ghost 0.16.7 seems to work well with LTN
    - removed creative mode from optional dependencies until it's updated to 0.16